<resources>
    <string name="app_name">Protego</string>
    <string name="title_profile">Protego</string>
    <string name="title_excluded">Excluded devices</string>
    <string name="main_headline">Social Distance Tool</string>
    <string name="tracker_on">Your tracker is on</string>
    <string name="distance_save">You are keeping a safe distance</string>
    <string name="distance_close">You are too close</string>
    <string name="access_excluded">Access Excluded Devices</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="distance_off">We can not alert you about social distance at the moment</string>
    <string name="tracker_off">Your tracker is off</string>
    <string name="bg_notification_title">"Your safety distance alert is active"</string>
    <string name="not_enabled_location">Location is not enabled</string>
    <string name="prompt_enable_location">Please enable location</string>
    <string name="not_enabled_ble">Bluetooth is not enabled</string>
    <string name="prompt_enable_ble">Allow Protego to enable Bluetooth</string>
    <string name="not_available_ble">Bluetooth LE not available</string>
    <string name="not_supported_ble">Sorry, this device does not support Bluetooth LE</string>
    <string name="settings_headline">Settings</string>
    <string name="set_alarmtone">Alert tone</string>
    <string name="set_sensivity">Set sensivity</string>
    <string name="warn_with_vibration">Alert with vibration</string>
    <string name="warn_with_audio">Alert with tone</string>
    <string name="log_to_file">Log to file</string>
    <string name="log_dir">Logdir:</string>
    <string name="no_devices_in_excluded">No excluded devices yet. Add more excluded devices in the tracker by
    by coming close to them first</string>
    <string name="cancel">Cancel</string>
    <string name="add_device_to_excluded">Device %s was excluded</string>
    <string name="add_device_to_excluded_q">Exclude %s ?</string>
    <string name="your_alert_settings">YOUR ALERT SETTINGS</string>
    <string name="your_sensitivity_settings">YOUR SENSITIVITY SETTINGS</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="sensitivity_explanation">Here you can set the distance, when you get an alert.
        With a low sensitivity devices have to be near to
        get an alert and with a high sensitivity you will also get alerts when device is more far
        away</string>
    <string name="first_use_notification">To receive an alert, the other device
        also has to install Protego</string>
    <string name="bluetooth_turned_off">Bluetooth was turned off</string>
    <string name="bluetooth_turn_on">Please enable Bluetooth</string>
    <string name="bg_location_title">Permisson problem</string>
    <string name="bg_location_message">We never check you location but bluetooth stops working when the app is in the background when the permission is not given</string>

</resources>
