<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.monitoring.MonitoringFragment" >

    <TextView
        android:id="@+id/main_headline"
        style="@style/TextRegular"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_headline"
        android:gravity="center"
        android:layout_marginTop="@dimen/spacing2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageButton
        android:id="@+id/show_settings"
        android:layout_width="@dimen/spacing3"
        android:layout_height="@dimen/spacing3"
        android:layout_margin="@dimen/spacing2"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/settings"
        android:background="@null"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/main_distance_save"
        style="@style/TextRegular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/distance_save"
        android:gravity="center"
        android:lines="2"
        android:ellipsize="end"
        android:layout_marginTop="@dimen/spacing3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_headline"
        />

    <TextView
        android:id="@+id/main_tracker_state"
        style="@style/TextRegular"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/spacing2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_distance_save"
        tools:text="@string/tracker_on"
        />

    <ImageView
        android:id="@+id/alarmImage"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/img_on"
        android:layout_marginTop="@dimen/spacing3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_tracker_state"
        />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/main_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alarmImage" />

    <TextView
        android:id="@+id/tracker_off"
        style="@style/TextRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing10"
        android:text="@string/off"
        app:layout_constraintRight_toLeftOf="@id/main_switch"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/main_switch"
        app:layout_constraintBottom_toBottomOf="@id/main_switch"
        />

    <TextView
        android:id="@+id/tracker_on"
        style="@style/TextRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing10"
        android:text="@string/on"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/main_switch"
        app:layout_constraintTop_toTopOf="@id/main_switch"
        app:layout_constraintBottom_toBottomOf="@id/main_switch"
        />

    <TextView
        android:id="@+id/add_to_excluded_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tracker_on"
        tools:text="add to excluded?"/>

    <TextView
        android:id="@+id/main_access_excluded"
        style="@style/TextRegular"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/spacing1"
        android:layout_marginBottom="@dimen/spacing3"
        android:text="@string/access_excluded"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_to_excluded_text"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>